# Qt5-CMake-Template

./: CMakeLists.txt
cmake/: QtChooser.cmake
resources/: Qt_Template.qrc
src/private/: main.cpp  qttemplate.cpp
src/public/: qttemplate.h
src/ui/: qttemplate.ui
